Feature 1: mycontact page created

--- a/CICDJuly1/WebContent/Mycontact.html
+++ b/CICDJuly1/WebContent/Mycontact.html
@@ -5,8 +5,10 @@
 <title>Insert title here</title>
 </head>
 <body>
-	<h1>Welcome</h1>
-	<p> BHJIH </p>
-	<a href="Mycontact.html">Check Contact Details</a>
+	<div>
+	Name: Ayush Garg
+	email : ayush@123
+	Add: WhiteField
+	</div>
 </body>
 </html>
